# c-emb-practice

01-ring_buffer/: CMakeLists.txt  build.sh  ring_buffer.c  ring_buffer.h  run.sh  test_ring_buffer.c
02-packet_queue/: CMakeLists.txt  build_and_run.sh  packet_queue.c  packet_queue.h  run.sh  test_packet_queue.c
